@@ -16,9 +16,7 @@
 
 package io.github.thatgarlicdude.pacio;
 
-import java.net.URI;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 /**A class that represents a file within a file system.*/
 abstract class PacFile {
@@ -43,22 +41,5 @@ abstract class PacFile {
 	protected PacFile(final Path path, final String name) {
 		this.path = path;
 		this.name = name;
-	}
-	
-	/**The main constructor of the PacFile, using the Path interface as the argument.*/
-	protected PacFile(final Path path) {
-		String name = path.getFileName().toString();
-		this.path = path;
-		this.name = name;
-	}
-	
-	/**A constructor using a URI for the file path.*/
-	protected PacFile(final URI pathURI) {
-		this(Paths.get(pathURI));
-	}
-	
-	/**A constructor using a String for the file path.*/
-	protected PacFile(final String pathString) {
-		this(Paths.get(pathString));
 	}
 }
